<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="3dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/receiveMessageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/receive_drawable"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/receiveImage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:visibility="gone"
            android:contentDescription="@string/receive_image" />

        <TextView
            android:id="@+id/receiveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="160dp"
            android:textColor="@color/black"
            android:paddingStart="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="11dp"
            android:textSize="14sp"
            android:text="@string/app_name"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/reactionIcon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:contentDescription="@string/reaction_image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/receiveMessageLayout"
        app:layout_constraintEnd_toEndOf="@+id/receiveMessageLayout"
        app:layout_constraintStart_toEndOf="@+id/receiveMessageLayout"
        app:layout_constraintTop_toTopOf="@+id/receiveMessageLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>