<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="3dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/sendMessageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/sent_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/sendPhoto"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:src="@drawable/otp_verify"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:contentDescription="@string/send_image"/>

        <TextView
            android:id="@+id/sendText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="11dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_gravity="end"
            android:text="@string/app_name"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/reactionIcon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:contentDescription="@string/reaction_image"
        android:visibility="gone"
        android:src="@drawable/ic_fb_love"
        app:layout_constraintBottom_toBottomOf="@+id/sendMessageLayout"
        app:layout_constraintEnd_toStartOf="@+id/sendMessageLayout"
        app:layout_constraintStart_toStartOf="@+id/sendMessageLayout"
        app:layout_constraintTop_toTopOf="@+id/sendMessageLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>